# access_management

./: CMakeLists.txt  README.md  api.php  sdkconfig  sdkconfig.ci  sdkconfig.ci.1
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/SQL_server/: SQL_server.c  SQL_server.h  new_cert.h
main/access/: access.c  access.h
main/certs/: prvtkey.pem  servercert.pem
main/logger/: logger.c  logger.h  sntp.c  sntp.h
main/mirf/: mirf.c  mirf.h
main/nrf/: nrf.c  nrf.h  nrf_message_handler.c  nrf_message_handler.h
main/services/: service_message_handler.c  service_message_handler.h
main/services/https_server/: https_server.c  https_server.h
main/services/tcp_server/: tcp_server.c  tcp_server.h
main/spiffs/: spiffs.c  spiffs.h
main/wifi_events/: wifi_events.c  wifi_events.h
test/: CMakeLists.txt
test/SQL_server/: SQL_server_test.c
test/access/: test_access.c
test/logger/: logger_test.c
test/spiffs/: spiffs_test.c
