idf_component_register(SRCS "main.c"
                            "access/access.c"
                            "logger/logger.c"
                            "logger/sntp.c"
                            "mirf/mirf.c"
                            "nrf/nrf_message_handler.c"
                            "nrf/nrf.c"
                            "services/https_server/https_server.c"
                            "services/tcp_server/tcp_server.c"
                            "services/service_message_handler.c"
                            "spiffs/spiffs.c"
                            "SQL_server/SQL_server.c"
                            "wifi_events/wifi_events.c"
                    INCLUDE_DIRS "."
                    EMBED_TXTFILES "certs/servercert.pem"
                                   "certs/prvtkey.pem")